deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: node-app
  namespace: node-app-demo-aditi 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-app
        deploymentconfig: node-app2
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: node-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/aditi-poc/node-app2:5
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
  namespace: node-app-demo-aditi
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-app-route
  namespace: node-app-demo-aditi
spec:
  path: /employee
  to:
    kind: Service
    name: node-app-svc
  port:
    targetPort: 8080
